<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>msckf_node</name>
  <version>0.1.0</version>
  <description>Package to Navigation System</description>
  <maintainer email="sprainsc0@icloud.com">sprain</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>libboost-dev</build_depend>
  <build_depend>libboost-date-time-dev</build_depend>
  <build_depend>libboost-random-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>suitesparse</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>sprain_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>

  <depend>launch</depend>

  <exec_depend>libboost-date-time</exec_depend>
  <exec_depend>libboost-random</exec_depend>
  <exec_depend>libboost-thread</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>libboost-dev</build_export_depend>
  <build_export_depend>libboost-random-dev</build_export_depend>
  <build_export_depend>libboost-thread-dev</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
